name:               gamekeeper
version:            0.2.6
synopsis:           Management and monitoring tools for RabbitMQ
license:            OtherLicense
license-file:       LICENSE
author:             Brendan Hay <brendan@soundcloud.com>
maintainer:         Brendan Hay <brendan@soundcloud.com>
homepage:           http://github.com/brendanhay/gamekeeper
bug-reports:        http://github.com/brendanhay/gamekeeper/issues
category:           Metrics, Monitoring
stability:          Experimental
build-type:         Simple
cabal-version:      >= 1.10

description:
    .
    Retrieve statistics/metrics, perform operations tasks, and manage RabbitMQ via the HTTP API
    .

extra-source-files: README.md

source-repository head
  type:     git
  location: git://github.com/brendanhay/gamekeeper.git

executable gamekeeper
  main-is:          Main.hs

  hs-source-dirs:   src

  default-language: Haskell2010
  default-extensions:
                    OverloadedStrings
                  , DeriveDataTypeable
                  , RecordWildCards
                  , TypeSynonymInstances
                  , FlexibleInstances

  ghc-options:      -Wall -rtsopts -threaded
  ghc-prof-options: -prof -fprof-auto -auto-all -with-rtsopts=-p

  build-depends:    base >= 4.3 && < 5
                  , ghc-prim
                  , transformers
                  , http-conduit
                  , http-types
                  , network
                  , network-metrics >= 0.2.4
                  , utf8-string
                  , bytestring
                  , vector
                  , aeson
                  , cmdargs
                  , time
                  , old-locale
                  , split