name:               gamekeeper
version:            0.3.1
synopsis:           Management and monitoring tools for RabbitMQ
description:        Retrieve statistics/metrics, perform operations tasks, and manage RabbitMQ via the HTTP API
license:            OtherLicense
license-file:       LICENSE
category:           Metrics, Monitoring
stability:          Experimental
build-type:         Simple
cabal-version:      >= 1.10

author:             Brendan Hay <brendan.g.hay@gmail.com>
maintainer:         Brendan Hay <brendan.g.hay@gmail.com>
homepage:           http://github.com/brendanhay/gamekeeper
bug-reports:        http://github.com/brendanhay/gamekeeper/issues

extra-source-files: README.md

source-repository head
  type:             git
  location:         git://github.com/brendanhay/gamekeeper.git

executable gamekeeper
  main-is:          Main.hs
  hs-source-dirs:   src

  default-language: Haskell2010
  default-extensions:
                    OverloadedStrings
                  , DeriveDataTypeable
                  , RecordWildCards
                  , TypeSynonymInstances
                  , FlexibleInstances

  ghc-options:      -Wall -O2 -rtsopts -threaded
  ghc-prof-options: -prof -fprof-auto -auto-all -with-rtsopts=-p

  build-depends:    base            >= 4 && < 5
                  , ghc-prim
                  , transformers
                  , http-conduit
                  , http-types
                  , network
                  , network-metrics >= 0.3.2
                  , utf8-string
                  , bytestring
                  , vector
                  , aeson
                  , cmdargs
                  , time
                  , old-locale
                  , split
                  , regex-compat
